# simple_trading_game

./: AGENTS.md  README.md  analytics.py  db.py  game.md  main.py  matching.py  models.py  pyproject.toml  requirements.txt  seed.py  ui.py
.streamlit/: config.toml
pages/: bank.py  company.py  professor.py
streamlit_version/: README.md  analytics.py  app.py  db.py  exports.py  matching.py  models.py  requirements.txt  seed.py  session_manager.py  session_services.py  snapshots.py  state.py  ui.py
streamlit_version/pages/: bank.py  company.py  professor.py  session_manager.py
