[project]
name = "trading-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.22",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "streamlit>=1.34",
    "xlsxwriter>=3.2",
    "matplotlib>=3.8",
]
